2007-08-27  Atsushi Enomoto  <atsushi@ximian.com>

	* IPGlobalProperties.cs, TcpConnectionInformation.cs,
	  TcpStatistics.cs, IPGlobalStatistics.cs, IcmpV4Statistics.cs,
	  IcmpV6Statistics.cs, UdpStatistics.cs :
	  initial implementation of IPGlobalProperties and its children
	  for Win32 API, mostly done. Non-Windows implementation should
	  follow.

2007-08-13  Alan McGovern  <amcgovern@novell.com>

	* PhysicalAddress.cs: Added patch for #82403 to fix some parsing
	errors and a bug in .Equals()

2006-03-11  Miguel de Icaza  <miguel@novell.com>

	* NetworkChange.cs: Use pragmas to eliminate warnings from events
	that we do not trigger yet.

	This is a candidate for using Aaron's NetworkManager code.  But
	would make us depend on d-bus.

	* NetworkInformationException.cs: Use error_code for ErrorCode,
	instead of NativeErrorCode.   Fixes warning. 

2006-02-24 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* UnicastIPAddressInformation.cs:
	* PingException.cs:
	* TcpConnectionInformation.cs:
	* IPv4InterfaceStatistics.cs:
	* NetworkInformationException.cs:
	* IPAddressInformation.cs:
	* MulticastIPAddressInformationCollection.cs:
	* TcpStatistics.cs:
	* IPGlobalStatistics.cs:
	* NetworkInformationPermission.cs:
	* MulticastIPAddressInformation.cs:
	* IcmpV4Statistics.cs:
	* IcmpV6Statistics.cs:
	* IPv4InterfaceProperties.cs:
	* PhysicalAddress.cs:
	* IPv6InterfaceProperties.cs:
	* GatewayIPAddressInformationCollection.cs:
	* ChangeLog: Modified file.
	* UnicastIPAddressInformationCollection.cs:
	* IPAddressCollection.cs:
	* NetworkInformationPermissionAttribute.cs:
	* Ping.cs:
	* NetworkChange.cs:
	* IPAddressInformationCollection.cs:
	* UdpStatistics.cs:
	* GatewayIPAddressInformation.cs:
	* IPGlobalProperties.cs:
	* IPInterfaceProperties.cs:
	* NetworkInterface.cs: implemented or stubbed out.

2006-02-22 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* NetBiosNodeType.cs:
	* IPStatus.cs:
	* NetworkInterfaceType.cs:
	* SuffixOrigin.cs: