@@ -27,6 +27,9 @@
 // WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 //
 #if NET_2_0
+using System.Collections.Specialized;
+using System.Globalization;
+
 namespace System.Net.NetworkInformation {
 	public abstract class TcpStatistics {
 		protected TcpStatistics ()
@@ -47,6 +50,64 @@ namespace System.Net.NetworkInformation {
 		public abstract long SegmentsReceived { get; }
 		public abstract long SegmentsResent { get; }
 		public abstract long SegmentsSent { get; }
+	}
+
+	class MibTcpStatistics : TcpStatistics
+	{
+		StringDictionary dic;
+
+		public MibTcpStatistics (StringDictionary dic)
+		{
+			this.dic = dic;
+		}
+
+		long Get (string name)
+		{
+			return dic [name] != null ? long.Parse (dic [name], NumberFormatInfo.InvariantInfo) : 0;
+		}
+
+		public override long ConnectionsAccepted {
+			get { return Get ("PassiveOpens"); }
+		}
+		public override long ConnectionsInitiated {
+			get { return Get ("ActiveOpens"); }
+		}
+		public override long CumulativeConnections {
+			get { return Get ("NumConns"); }
+		}
+		public override long CurrentConnections {
+			get { return Get ("CurrEstab"); }
+		}
+		public override long ErrorsReceived {
+			get { return Get ("InErrs"); }
+		}
+		public override long FailedConnectionAttempts {
+			get { return Get ("AttemptFails"); }
+		}
+		public override long MaximumConnections {
+			get { return Get ("MaxConn"); }
+		}
+		public override long MaximumTransmissionTimeout {
+			get { return Get ("RtoMax"); }
+		}
+		public override long MinimumTransmissionTimeout {
+			get { return Get ("RtoMin"); }
+		}
+		public override long ResetConnections {
+			get { return Get ("EstabResets"); }
+		}
+		public override long ResetsSent {
+			get { return Get ("OutRsts"); }
+		}
+		public override long SegmentsReceived {
+			get { return Get ("InSegs"); }
+		}
+		public override long SegmentsResent {
+			get { return Get ("RetransSegs"); }
+		}
+		public override long SegmentsSent {
+			get { return Get ("OutSegs"); }
+		}
 	}
 
 	class Win32TcpStatistics : TcpStatistics
